# HTX_summarize_app

./: .gitignore  README.md  package-lock.json  package.json
backend-flask/: pyproject.toml
backend-flask/src/backend_flask/: app.py
backend/htx-backend/: pyproject.toml  requirements.txt
backend/htx-backend/requests/: analyze.rest  find_nationalities.rest  summarize.rest
backend/htx-backend/src/htx_backend/: app.py  main.py
ecr/: Dockerfile
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ChatInput.tsx  ErrorBar.tsx  FileDisplay.tsx  InputFileDisplay.tsx  Nationalities.tsx  Summary.tsx
frontend/src/services/: mistral.ts  summarize.ts
src/: App.tsx
