[project]
name = "htx-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Chan, Wei Jian Ivan",email = "ivan_chan@mymail.sutd.edu.sg"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "mistralai (>=1.8.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "htx_backend", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
